--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update ICS file daily
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # täglich um 2:00 UTC
+    - cron: '0 2 * * *'  # täglich um 2:00 UTC (4:00 deutscher Zeit)
   workflow_dispatch:
 
 jobs:
@@ -33,6 +33,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@users.noreply.github.com
+          git pull --rebase
           git add stundenplan_export.ics || echo "No file"
           git commit -m "Update ICS automatically" || echo "Nothing to commit"
           git push
