--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@users.noreply.github.com
-          git pull --rebase
           git add stundenplan_export.ics || echo "No file"
           git commit -m "Update ICS automatically" || echo "Nothing to commit"
+          git pull --rebase --autostash
           git push
