--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,8 +19,8 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
-          pip install beautifulsoup4 ics
+        run: pip install -r requirements.txt
+
 
       - name: Download Stundenplan
         run: |
