--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,39 +1,36 @@
 name: Update ICS file daily
 
 on:
-  schedule:
-    - cron: '0 2 * * *'  # täglich um 2:00 UTC (4:00 deutscher Zeit)
   workflow_dispatch:
+  schedule:
+    - cron: '0 6 * * *'  # täglich um 06:00 UTC
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
-
-
-      - name: Download Stundenplan
         run: |
-          curl -o stundenplan.html "https://studieninstitute.org/Duisburg/kursauswahl.php?KursName=Stg25FiSoG&abc=S"
+          pip install beautifulsoup4 ics
 
-      - name: Parse HTML to ICS
-        run: python stundenplan_parser.py
+      - name: Run parser script
+        run: python main/stundenplan_parser.py
 
-      - name: Commit & push ICS
+      - name: Commit and Push changes
         run: |
           git config user.name github-actions
-          git config user.email github-actions@users.noreply.github.com
-          git add stundenplan_export.ics || echo "No file"
-          git commit -m "Update ICS automatically" || echo "Nothing to commit"
-          git pull --rebase --autostash
-          git push
+          git config user.email github-actions@github.com
+          git fetch origin
+          git reset --hard origin/main
+          git add stundenplan_export.ics
+          git commit -m "Update ICS automatically" || echo "No changes to commit"
+          git push origin HEAD:main
