--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -29,8 +32,6 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git fetch origin
-          git reset --hard origin/main
           git add stundenplan_export.ics
           git commit -m "Update ICS automatically" || echo "No changes to commit"
           git push origin HEAD:main
