--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,9 +12,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: true
-          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -32,6 +29,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git pull --rebase origin main || true
           git add stundenplan_export.ics
           git commit -m "Update ICS automatically" || echo "No changes to commit"
           git push origin HEAD:main
