--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git pull --rebase origin main || true
+          git pull --rebase origin main || echo "Rebase failed or nothing to rebase"
           git add stundenplan_export.ics
           git commit -m "Update ICS automatically" || echo "No changes to commit"
-          git push origin HEAD:main
+          git push origin HEAD:main || echo "Push failed"
