--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install beautifulsoup4 ics
+          pip install beautifulsoup4 ics pytz
 
       - name: Run parser script
         run: python stundenplan_parser.py
