--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -37,3 +37,10 @@ jobs:
             git commit -m "Update ICS automatically"
             git push origin HEAD:main || echo "Push failed"
           fi
+
+      - name: Run monitor script and send mail on changes
+        run: python stundenplan-monitor.py
+        env:
+          SMTP_EMAIL: ${{ secrets.SMTP_EMAIL }}
+          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+          MAIL_RECIPIENT: ${{ secrets.MAIL_RECIPIENT }}
